--- a/src/components/ItemList/Style.css
+++ b/src/components/ItemList/Style.css
@@ -1,6 +1,4 @@
-.itemList {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
+/* .itemList {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+}*/
